2012-01-30  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/copyright: Set copyright.

2011-12-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Create first draft of manpages for distributed binaries.

	* debian/olena-dev.manpages
	* debian/scribo-cli.1
	* debian/scribo-viewer.1

2011-12-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Update Debian package configuration.

	* debian/changelog: Use the correct release date.

	* debian/control: Update architecture and descriptions.

	* debian/olena-bin.install,
	* debian/olena-dev.docs,
	* debian/olena-dev.install: Update list of files.

	* debian/olena-dev.doc-base: New.

	* debian/rules: Make it support several packages builds.

2011-12-02  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/HOWTO: How to make .deb package.

2011-12-02  Guillaume Lazzara  <z@lrde.epita.fr>

	Add package description files for .deb generation.

	* README.Debian,
	* changelog,
	* compat,
	* control,
	* copyright,
	* olena-bin.install,
	* olena-dev.docs,
	* olena-dev.install,
	* olena.1,
	* olena.desktop,
	* olena.install,
	* olena.manpages,
	* olena.menu,
	* olena.xpm,
	* rules: New.

2014-06-27  Roland Levillain  <roland@lrde.epita.fr>

	Add warning flags to Scribo compiler flags.

	* configure.ac (SCRIBO_CXXFLAGS, SCRIBO_TESTS_CXXFLAGS):
	Add $WARNINGS_CXXFLAGS.

2014-06-27  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac: Aesthetic changes.

2014-06-27  Roland Levillain  <roland@lrde.epita.fr>

	Use AX_CHECK_COMPILE_FLAG to check compiler support for `-pipe'.

	* configure.ac: Here.

2014-06-27  Roland Levillain  <roland@lrde.epita.fr>

	Avoid warnings about unused local typedefs.

	* m4/ax_check_compile_flag.m4: New.
	Imported from
	http://www.gnu.org/software/autoconf-archive/ax_check_compile_flag.html.
	* configure.ac: Ensure AX_* macros are expanded.
	(WARNINGS_CXXFLAGS): Add `-Wno-unused-local-typedefs' if the C++
	compiler supports this flag.

2014-06-26  Roland Levillain  <roland@lrde.epita.fr>
